<resources>
    <string name="app_name">MVP-Practise</string>
    <string name="action_settings">Settings</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="dashboard">Dashboard</string>
    <string name="message">Message</string>
</resources>
